# bonzi-buddy

./: .gitignore  README.md  pyproject.toml  requirements-build.txt  run.ps1  run.sh
.claude/: launch.json
.github/workflows/: build.yml  pages.yml
assets/: facts.json  jokes.json  songs.json
assets/Books/Bonz and the Treasure Chest/: book
docs/: index.html
packaging/: bonzi.spec  entry.py
src/bonzi/: __init__.py  app.py  content.py  resources.py
src/bonzi/acs/: __init__.py  image.py  model.py  parser.py  reader.py  rle.py  store.py
src/bonzi/runtime/: __init__.py  balloon.py  calendar.py  characters.py  downloader.py  features.py  options_dialog.py  pet.py  player.py  reader.py  settings.py  sound.py  tts.py
tests/: test_calendar.py  test_characters.py  test_downloader.py  test_reader.py  test_tts.py
tools/: dump_acs.py  extract_content.py  extract_songs.py
