[project]
name = "bonzi-linux"
version = "0.1.0"
description = "Native Linux (Python/Qt) port of BonziBUDDY Rewritten — a Microsoft Agent desktop pet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.scripts]
bonzi = "bonzi.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
